# prototype-cpp-coro

./: CMakeLists.txt  CMakePresets.json  README.md  prototype_cpp_coro_version.h.in
cmake/: PrototypeCppCoroOptions.cmake
include/prototype_cpp_coro/: prototype_cpp_coro.h  prototype_cpp_coro_version.h  scheduler.h  task.h
src/: CMakeLists.txt  prototype_cpp_coro.cpp  scheduler.cpp
tests/: CMakeLists.txt  prototype_cpp_coro_tests.cpp
